v0.4.0 (2023-02-24)

- Add dates to releases.
- Add Julia versions of each plotting script
- Add network plot for device % utilization
- Remove original HTML generating report scripts
- More shellcheck linting

v0.3.2 (2023-01-30)

- Fix CMake project() definition
- shellcheck linting

v0.3.1 (2022-06-28)

- Fix parameter count check in dbt-plot-transaction-distribution

v0.3.0 (2022-05-16)

- Add generic transaction rate plotting script
- Update plot-transaction-distribution script to handle multiple data files

v0.2.0 (2022-04-19)

- Update command line flags in some scripts in effort to make usage more
  uniform
- Create more sar memory charts: kbbuffers, kbcached, and kbdirty
- Enhance pidstat processing
- Fix pidstat chart creation
- Adopt Artistic License 2.0

v0.1.0 (2021-10-27)

- Initial release.